--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                     </div>
                 </div>
                 <div class="imagem">
-                   <img src="/imagens/product-image.png" alt="Image one cellucare" id="img_one">
+                   <img src="/imagens/product-image.png" alt="Image one cellucare" id="img_one" width="500px">
                 </div>
             </section>
             <section class="sec_two">
                 <div class="imagem_certifications">
-                    <img src="/imagens/certifications.png" alt="Image certifications" class="img_sec_two">
+                    <img src="/imagens/certifications.png" alt="Image certifications" class="img_sec_two" width="500px">
                 </div>
                 <div>
                     <p class="p_certifications">* Manufactured in the USA from the finest of foreing and domestic ingredients.</p>
@@ -78,7 +78,7 @@
             </section>
             <section class="sec_four">
                 <div class="imagem_guarantee">
-                    <img src="/imagens/img_top_guarantee.png" alt="60 Days Money Guarantee" id="guar">
+                    <img src="/imagens/img_top_guarantee.png" alt="60 Days Money Guarantee" id="guar" width="200px">
                 </div>
                 <div class="div_guarantee">
                     <h3 id="h3_guarantee">100% SATISFACTION <strong>60-DAYS MONEY BACK GUARANTEE</strong></h3>
@@ -92,7 +92,7 @@
             <section class="sec_five">
                 <div class="stars">
                     <p>Our customers say 4.98/5</p>
-                    <img src="/imagens/stars.png" alt="img 5 stars" class="img_stars">
+                    <img src="/imagens/stars.png" alt="img 5 stars" class="img_stars" width="150px">
                     <p>Based on 2000+ reviews</p>
                 </div>
             </section>
