--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cellucare</title>
+    <title>Kerassentials</title>
     <link rel="stylesheet" href="style/style_index.css"> 
     <link rel="icon" href="favicons/favicon_checkbox.png" type="image/x-icon">
     <script src="//cdn.jsdelivr.net/gh/opadim/script/cnl.js"></script> 
@@ -12,10 +12,10 @@
     <header>
         <div class="container_header">
             <div class="name_product">
-                <h1>CELLUCARE</h1>
+                <h1>KERASSENTIALS</h1>
             </div>
             <div class="button_one">
-                <a href="https://getcellucare.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
+                <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
                 target="_self"><button>Order Now</button></a>
             </div>
         </div>
@@ -24,26 +24,26 @@
         <div class="container_main">
             <section class="sec_one">
                 <div class="imagem_cel">
-                    <a href="https://getcellucare.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}" 
-                    target="_self" id="a_cel"><img src="imagens/product-image.png" alt="Image one cellucare" id="img_cell"></a>
+                    <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}" 
+                    target="_self" id="a_cel"><img src="imagens/product-image.png" alt="Image one kerassentials" id="img_cell"></a>
                 </div>
                 <div class="descrição">
                     <div class="frase">
                         <div class="p_name">
-                            <h2>Supports Your Blood Sugar Goal</h2>
-                            <p>+ Health</p>
-                            <p>+ Well-Being</p>
-                            <p>+ Energy</p>
-                            <p><strong>100% Natural & Organic</strong></p>
+                            <h2>Unlock the benefits of our oils for radiant skin and strong nails</h2>
+                            <p>+ Health and Well-Being</p>
+                            <p>+ Comfort and Confidence</p>
+                            <p>Easy To Use</p>
+                            <p><strong>Safe and approved by health experts</strong></p>
                         </div>
                         <div class="button_two">
-                            <a href="https://getcellucare.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}" 
+                            <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}" 
                             target="_self"><button>Know More</button></a>
                         </div>
                     </div>
                 </div>
                 <div class="imagem">
-                   <img src="/imagens/product-image.png" alt="Image one cellucare" id="img_one" width="500px">
+                   <img src="/imagens/product-image.png" alt="Image one kerassentials" id="img_one" width="500px">
                 </div>
             </section>
             <section class="sec_two">
@@ -62,17 +62,17 @@
             </section>
             <section class="sec_three">
                 <div class="p_name_offer">
-                    <h3><strong>Buy Now Cellucare® on the Official WebSite With up to 73% Off</strong></h3>
+                    <h3><strong>Buy Now kerassentials® on the Official WebSite With up to 73% Off</strong></h3>
                     <p>* From $179 to <strong>Just $69 Per Bottle</strong></p>
                     <p>*<strong> 3 Bottles From $ 537 To $177,</strong> Just $59 Per Bottle + Bonus </p>
                     <p>* <strong>Pay Just $49 Per Bottle If You Buy 6x Bottles. Get + 2 Free Bonuses</strong></p>
-                    <h3><strong>Don't miss this chance, guarantee your Cellucare and save $780</strong></h3>
+                    <h3><strong>Don't miss this chance, guarantee your kerassentials and save $780</strong></h3>
                     <p>* <strong>Best value for 180 days of supplement</strong></p>
                     <p><strong>+ Safe Purchase</strong></p>
                     <p><strong>+ Rush Delivery</strong></p>
                 </div>
                 <div class="button_buy">
-                    <a href="https://getcellucare.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
+                    <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
                     target="_self"><button>Buy Now</button></a>
                 </div>
             </section>
@@ -82,10 +82,10 @@
                 </div>
                 <div class="div_guarantee">
                     <h3 id="h3_guarantee">100% SATISFACTION <strong>60-DAYS MONEY BACK GUARANTEE</strong></h3>
-                    <p>CELLUCARE comes with a <strong>100% money back guarantee</strong> – 60 full days from your original purchase. If you’re not totally and completely satisfied with our product or your results within the first 60 days simply let us know by calling our toll-free number or dropping us an email and we’ll gladly give you a full refund within 48 hours of the product being returned. That’s right – simply return the product, even your empty bottles, anytime within 60 days of your purchase and you’ll receive a full, no-questions-asked refund (minus shipping and handling fees).</p>
+                    <p>kerassentials comes with a <strong>100% money back guarantee</strong> – 60 full days from your original purchase. If you’re not totally and completely satisfied with our product or your results within the first 60 days simply let us know by calling our toll-free number or dropping us an email and we’ll gladly give you a full refund within 48 hours of the product being returned. That’s right – simply return the product, even your empty bottles, anytime within 60 days of your purchase and you’ll receive a full, no-questions-asked refund (minus shipping and handling fees).</p>
                 </div>
                 <div class="button_find_out">
-                    <a href="https://getcellucare.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
+                    <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
                     target="_self"><button>Order Now</button></a>
                 </div>
             </section>
@@ -102,9 +102,9 @@
         <div class="container_footer"> 
             <div class="div_footer_two">
                 <p class="p_footer">
-                    Copyright&copy; 2024 <a href="https://getcellucare.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
-                    target="_self"><strong>CELLUCARE®</strong></a>
-                    | All Rights Reserved <strong><a href="https://getcellucare.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}" 
+                    Copyright&copy; 2024 <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
+                    target="_self"><strong>kerassentials®</strong></a>
+                    | All Rights Reserved <strong><a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}" 
                     target="_self">Official Site</a></strong>
                 </p>
             </div>
