--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
             </section>
             <section class="sec_balloon">
                 <div class="div_balloon">
-                    <h2>Claim Your Discounted</h2>
-                    <h2>Last Units</h2>
+                    <h2>Claim Your Discounted Kerassentials</h2>
+                    <h2>Last Units, enjoy today</h2>
                 </div>
             </section>
             <section class="sec_three">
                 <div class="p_name_offer">
-                    <h3><strong>Buy Now kerassentials® on the Official WebSite With up to 73% Off</strong></h3>
-                    <p>* From $179 to <strong>Just $69 Per Bottle</strong></p>
-                    <p>*<strong> 3 Bottles From $ 537 To $177,</strong> Just $59 Per Bottle + Bonus </p>
-                    <p>* <strong>Pay Just $49 Per Bottle If You Buy 6x Bottles. Get + 2 Free Bonuses</strong></p>
-                    <h3><strong>Don't miss this chance, guarantee your kerassentials and save $780</strong></h3>
+                    <h3><strong>Buy Now on the Official Website, Enjoy and Save:</strong></h3>
+                    <p>* From $99 to <strong>Just $69 Per Bottle</strong></p>
+                    <p>*<strong> 3 Bottles From $ 297 To $177,</strong> Just $59 Per Bottle </p>
+                    <p>* <strong>Pay Just $49 Per Bottle If You Buy 6x Bottles</strong></p>
+                    <h3><strong>Don't miss this chance, guarantee your kerassentials</strong></h3>
                     <p>* <strong>Best value for 180 days of supplement</strong></p>
                     <p><strong>+ Safe Purchase</strong></p>
                     <p><strong>+ Rush Delivery</strong></p>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="div_guarantee">
                     <h3 id="h3_guarantee">100% SATISFACTION <strong>60-DAYS MONEY BACK GUARANTEE</strong></h3>
-                    <p>kerassentials comes with a <strong>100% money back guarantee</strong> – 60 full days from your original purchase. If you’re not totally and completely satisfied with our product or your results within the first 60 days simply let us know by calling our toll-free number or dropping us an email and we’ll gladly give you a full refund within 48 hours of the product being returned. That’s right – simply return the product, even your empty bottles, anytime within 60 days of your purchase and you’ll receive a full, no-questions-asked refund (minus shipping and handling fees).</p>
+                    <p>Your order today is covered by our iron-clad 60-day 100% money-back guarantee. If you are not impressed with the results, then just write to us and we’ll refund every single cent.</p>
                 </div>
                 <div class="button_find_out">
                     <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
@@ -91,9 +91,9 @@
             </section>
             <section class="sec_five">
                 <div class="stars">
-                    <p>Our customers say 4.98/5</p>
+                    <p>Our customers say</p>
                     <img src="/imagens/stars.png" alt="img 5 stars" class="img_stars" width="150px">
-                    <p>Based on 2000+ reviews</p>
+                    <p>Based on 14.576+ reviews!</p>
                 </div>
             </section>
         </div>
@@ -104,12 +104,12 @@
                 <p class="p_footer">
                     Copyright&copy; 2024 <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
                     target="_self"><strong>kerassentials®</strong></a>
-                    | All Rights Reserved <strong><a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}" 
-                    target="_self">Official Site</a></strong>
+                    | All Rights Reserved
                 </p>
             </div>
             <div class="div_footer_one">
-                <h4><a href="pages/terms.html" target="_self">TERMS</a></h4>
+                <h4><a href="https://thekerassentials.com//help/contact-us.php" target="_blank">CONTACT</a></h4>
+                <h4><a href="pages/terms.html" target="_self">TERMS OF USE</a></h4>
                 <h4><a href="pages/privacy.html" target="_self">PRIVACY</a></h4>
                 <h4><a href="/pages/return_policy.html" target="_self">RETURN POLICY</a></h4>
                 <h4><a href="/pages/shipping.html" target="_self">SHIPPING</a></h4>
