--- a/pages/terms.html
+++ b/pages/terms.html
@@ -3,7 +3,7 @@ Information on this Site including any product label or packaging should not be 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms</title>
+    <title>Terms & Conditions</title>
     <link rel="stylesheet" href="/style/policy.css"> 
 </head>
 <body>
@@ -67,7 +67,7 @@ Information on this Site including any product label or packaging should not be 
     </main>
     <footer>
         <div id="container_footer"> 
-            <p id="p_footer">
+            <p id="p_footer"> Copyright 
                 &copy;<a href="/index.html"><strong> CELLUCARE®</strong></a>
                 Research 2024 All Rights Reserved. <strong><a href="/index.html">
             </p>
