--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="container_footer"> 
             <div class="div_footer_two">
                 <p class="p_footer">
-                    Copyright&copy; 2024 <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
+                    Copyright &copy; 2024 <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
                     target="_self"><strong>kerassentials®</strong></a>
                     | All Rights Reserved
                 </p>
@@ -110,10 +110,11 @@
             <div class="div_footer_one">
                 <h4><a href="https://thekerassentials.com//help/contact-us.php" target="_blank">CONTACT</a></h4>
                 <h4><a href="pages/terms.html" target="_self">TERMS OF USE</a></h4>
-                <h4><a href="pages/privacy.html" target="_self">PRIVACY</a></h4>
-                <h4><a href="/pages/return_policy.html" target="_self">RETURN POLICY</a></h4>
-                <h4><a href="/pages/shipping.html" target="_self">SHIPPING</a></h4>
                 <h4><a href="/pages/disclaimer.html" target="_self">DISCLAIMER</a></h4>
+                <h4><a href="pages/privacy.html" target="_self">PRIVACY POLICY</a></h4>
+                <h4><a href="/pages/shipping.html" target="_self">SHIPPING POLICY</a></h4>
+                <h4><a href="/pages/return_policy.html" target="_self">RETURN POLICY</a></h4>
+                
             </div>
         </div>
     </footer>
