--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>KERASSENTIALS</h1>
             </div>
             <div class="button_one">
-                <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
+                <a href="https://thekerassentials.com/start/index.php?aff_id=1047659"
                 target="_self"><button>Order Now</button></a>
             </div>
         </div>
@@ -24,7 +24,7 @@
         <div class="container_main">
             <section class="sec_one">
                 <div class="imagem_cel">
-                    <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}" 
+                    <a href="https://thekerassentials.com/text.php?aff_id=1047659" 
                     target="_self" id="a_cel"><img src="imagens/product-image.png" alt="Image one kerassentials" id="img_cell"></a>
                 </div>
                 <div class="descrição">
@@ -37,7 +37,7 @@
                             <p><strong>Safe and approved by health experts</strong></p>
                         </div>
                         <div class="button_two">
-                            <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}" 
+                            <a href="https://thekerassentials.com/text.php?aff_id=1047659" 
                             target="_self"><button>Know More</button></a>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                     <p><strong>+ Rush Delivery</strong></p>
                 </div>
                 <div class="button_buy">
-                    <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
+                    <a href="https://thekerassentials.com/start/index.php?aff_id=1047659"
                     target="_self"><button>Buy Now</button></a>
                 </div>
             </section>
@@ -85,7 +85,7 @@
                     <p>Your order today is covered by our iron-clad 60-day 100% money-back guarantee. If you are not impressed with the results, then just write to us and we’ll refund every single cent.</p>
                 </div>
                 <div class="button_find_out">
-                    <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
+                    <a href="https://thekerassentials.com/text.php?aff_id=1047659"
                     target="_self"><button>Order Now</button></a>
                 </div>
             </section>
@@ -102,7 +102,7 @@
         <div class="container_footer"> 
             <div class="div_footer_two">
                 <p class="p_footer">
-                    Copyright &copy; 2024 <a href="https://getkerassentials.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
+                    Copyright &copy; 2024 <a href="https://thekerassentials.com/text.php?aff_id=1047659"
                     target="_self"><strong>kerassentials®</strong></a>
                     | All Rights Reserved
                 </p>
@@ -113,7 +113,7 @@
                 <h4><a href="/pages/disclaimer.html" target="_self">DISCLAIMER</a></h4>
                 <h4><a href="pages/privacy.html" target="_self">PRIVACY POLICY</a></h4>
                 <h4><a href="/pages/shipping.html" target="_self">SHIPPING POLICY</a></h4>
-                <h4><a href="/pages/return_policy.html" target="_self">RETURN POLICY</a></h4>
+                <h4><a href="/pages/return_policy.html" target="_self">REFUND POLICY</a></h4>
                 
             </div>
         </div>
