--- a/pages/terms.html
+++ b/pages/terms.html
@@ -59,7 +59,7 @@ Information on this Site including any product label or packaging should not be 
             <br>
             <div id="button">
                 <div id="button_two">
-                    <a href="https://getcellucare.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
+                    <a href="https://thekerassentials.com/text.php?aff_id=1047659"
                     target="_self"><button>Claim your special discount!</button></a>
                 </div>
             </div>
