--- a/pages/return_policy.html
+++ b/pages/return_policy.html
@@ -3,58 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Return Policy</title>
+    <title>Refund Policy</title>
     <link rel="stylesheet" href="/style/policy.css">
 </head>
 <body>
     <header>
         <div id="container_header">
-            <h1>Return Policy</h1>
+            <h1>Refund Policy</h1>
         </div>
     </header>
     <main>
         <div id="container_main">
-            <h2>Returns</h2>
-            <p>If you are unsatisfied with your product for any reason you will have 60 days from the date of purchase to return the product and request a refund. You may return any Product (as defined below) purchased on cellucarehq.com in accordance with the terms below:</p>
-            <p>A return authorization must be requested and approved within 60 days of your date of purchase. You must contact us at <a href="mailto:support@cellucarehq.com">support@cellucarehq.com</a> to request and receive an RMA.</p>
-            <p>The return authorization number must be included along with your returned product. Once an RMA is received please return the item and email us back with the RMA and the tracking# so we can track your return. You will have to pay for shipping.</p>
-            <p>You must return the Product to the address provided to receive a refund at your cost within 14 days of receipt of RMA</p>
-            <p>Returned Product(s) must be in good physical condition (not physically broken or damaged). All accessories originally included with your purchase must be included with your return.</p>
-            <p>For your convenience, the return address for CELLUCARE is: 19655 E 35th Dr #100, Aurora CO 80011, USA</p>
-            <h2>Non-returnable items:</h2>
-            <p>Gift cards</p>
-            <p>Downloadable software products</p>
-            <p>Some health and personal care items</p>
-            <p>To complete your return, we require a receipt or proof of purchase.</p>
-            <p>Please do not send your purchase back to the manufacturer.</p>
-            <h2>There are certain situations where only partial refunds are granted (if applicable)</h2>
-            <p>Book with obvious signs of use CD, DVD, VHS tape, software, video game, cassette tape, or vinyl record that has been opened.</p>
-            <p>Any item not in its original condition, is damaged or missing parts for reasons not due to our error</p>
-            <p>Any item that is returned more than 60 days after purchase</p>
-            <h2>Refunds (if applicable)</h2>
-            <p>Once your return is received and inspected, we will send you an email to notify you that we have received your returned item. We will also notify you of the approval or rejection of your refund.</p>
-            <p>If you are approved, then your refund will be processed, and a credit will automatically be applied to your credit card or original method of payment, within a certain amount of days.</p>
-            <h2>Late or missing refunds (if applicable)</h2>
-            <p>If you haven’t received a refund yet, first check your bank account again. Then contact your credit card company, it may take some time before your refund is officially posted.</p>
-            <p>Next contact your bank. There is often some processing time before a refund is posted. If you’ve done all of this and you still have not received your refund yet, please contact us at <a href="mailto:support@cellucarehq.com">support@cellucarehq.com</a></p>
-            <h2>Sale items (if applicable)</h2>
-            <p>Only regular priced items may be refunded, unfortunately sale items cannot be refunded.</p>
-            <h2>Exchanges (if applicable)</h2>
-            <p>We only replace items if they are defective or damaged. If you need to exchange it for the same item, send us an email at <a href="mailto:support@cellucarehq.com">support@cellucarehq.com</a> and we will provide you further instructions on where to return the item for an exchange. Please note that we cannot accept exchanges beyond 60 days from the date of delivery.</p>
-            <h2>Gifts</h2>
-            <p>If the item was marked as a gift when purchased and shipped directly to you, you’ll receive a gift credit for the value of your return. Once the returned item is received, a gift certificate will be mailed to you.</p>
-            <p>If the item wasn’t marked as a gift when purchased, or the gift giver had the order shipped to themselves to give to you later, we will send a refund to the gift giver and he will find out about your return.</p>
-            <p>Still have questions about your return? Contact customer service at <a href="mailto:support@cellucarehq.com">support@cellucarehq.com</a></p>
+            <br>
+            <br>
+            <p>After your purchase, you have 60 days from the moment you get your package to explore the benefits of this amazing product. We truly hope that you will soon become one of the many customers who contact us to share the joy of their experience with us.</p>
+            <p>But, if this is not the case with you, and if you are not fully satisfied with your investment, you can easily ask for your money back!</p>
+            <p>BEFORE you request a refund, please make sure you've given the product enough time to work for you. We usually advise all our customers to use the product for at least 3 months in order for them to prove their effect on the organism before reaching a conclusion.</p>
+            <p>If you have made up your mind and you want your money back, please see below how to do this.</p>
             <br>
             <br>
             <br>
+            <h2>Step-by-Step Refund Guideline:</h2>
+            <h3>Step 1:</h3>
+            <p>Make sure you are still in the 60-day period starting with the day the order has been delivered to you. To remember the delivery date please check the tracking number on the carrier's website.</p>
+            <h3>Step 2:</h3>
+            <p>Send an email to our support team contact@kerassentials-product.com and tell them you are not fully convinced by the benefits of the product. Please add "Refund Request" in the subject line of your email to ensure your refund request gets priority.</p>
+            <h3>Step 3:</h3>
+            <p>Send all the bottles back to us (no matter if they are empty or not) at the below address. It doesn’t matter if the bottles are opened or not. Insert a note with your full name, email, and order id (optional) so your order can be located and processed with priority.</p>
+            <p>As long as you sent back ALL the bottles and the Packing Slip, you can rest assured the refund will be processed in only a few days after we receive your package.</p>
+            <p>Please keep in mind that we do not support the return shipping costs.</p>
+            <p><strong>19655 E 35th Dr #100, Aurora, CO 80011, USA</strong></p>
+            <h3>Step 4:</h3 >
+            <p>Be patient, we will process your refund in no time after we get your package...and, rest assured, we will send you an email to let you know it has been done. It may take a while for your refund to appear on your credit card statement, depending on which bank you use or credit card company. The processing time is between 5 and 10 days.</p>
+            <br>
+            <br>
+            <h2>How To Contact Us</h2>
+            <p>Product Email Support <a href="mailto:contact@kerassentials-product.com">contact@kerassentials-product.com</a></p>
+            <p>* Every email is managed by our friendly customer support agents, and they will reply as soon as possible.</p>
             <br>
             <br>
             <br>
-            <p>The information on this website has not been evaluated by the Food and Drug Administration. These products are not intended to diagnose, treat, cure or prevent any disease.</p>
             <div id="button">
                 <div id="button_two">
-                    <a href="https://getcellucare.com/b/order-now.php?aff_id=38790&subid={keyword}&subid2={gclid}&subid3={campaignid}&subid4={device}&subid5={matchtype}"
+                    <a href="https://thekerassentials.com/text.php?aff_id=1047659"
                     target="_self"><button>Claim your special discount!</button></a>
                 </div>
             </div>
@@ -62,8 +53,8 @@
     </main>
     <footer>
         <div id="container_footer"> 
-            <p id="p_footer">
-                &copy;<a href="/index.html"><strong> CELLUCARE®</strong></a>
+            <p id="p_footer">Copyright 
+                &copy;<a href="/index.html"><strong> kerassentials®</strong></a>
                 Research 2024 All Rights Reserved. <strong><a href="/index.html">
             </p>
         </div>
