--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </section>
             <section class="sec_balloon">
                 <div class="div_balloon">
-                    <h2>Claim Your Discounted Kerassentials</h2>
+                    <h2>Claim Your Discounted</h2>
                     <h2>Last Units, enjoy today</h2>
                 </div>
             </section>
@@ -108,14 +108,26 @@
                 </p>
             </div>
             <div class="div_footer_one">
-                <h4><a href="https://thekerassentials.com//help/contact-us.php" target="_blank">CONTACT</a></h4>
-                <h4><a href="pages/terms.html" target="_self">TERMS OF USE</a></h4>
-                <h4><a href="/pages/disclaimer.html" target="_self">DISCLAIMER</a></h4>
-                <h4><a href="pages/privacy.html" target="_self">PRIVACY POLICY</a></h4>
-                <h4><a href="/pages/shipping.html" target="_self">SHIPPING POLICY</a></h4>
-                <h4><a href="/pages/return_policy.html" target="_self">REFUND POLICY</a></h4>
-                
+                <div class="div_one">
+                    <h4><a href="https://thekerassentials.com//help/contact-us.php" target="_blank">CONTACT</a></h4>
+                </div>
+                <div>
+                    <h4><a href="pages/terms.html" target="_self">TERMS OF USE</a></h4>
+                </div>
+                <div>
+                    <h4><a href="/pages/disclaimer.html" target="_self">DISCLAIMER</a></h4>
+                </div>
+                <div class="div_two">
+                    <h4><a href="pages/privacy.html" target="_self">PRIVACY POLICY</a></h4>
+                </div>
+                <div>
+                    <h4><a href="/pages/shipping.html" target="_self">SHIPPING POLICY</a></h4>
+                </div>
+                <div>
+                    <h4><a href="/pages/return_policy.html" target="_self">REFUND POLICY</a></h4>
+                </div>
             </div>
+            
         </div>
     </footer>
 </body>
