--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section class="sec_one">
                 <div class="imagem_cel">
                     <a href="https://thekerassentials.com/text.php?aff_id=1047659" 
-                    target="_self" id="a_cel"><img src="imagens/product-image.png" alt="Image one kerassentials" id="img_cell"></a>
+                    target="_self" id="a_cel"><img src="imagens/product-image.png" alt="buy kerassentials" id="img_cell"></a>
                 </div>
                 <div class="descrição">
                     <div class="frase">
@@ -43,12 +43,12 @@
                     </div>
                 </div>
                 <div class="imagem">
-                   <img src="/imagens/product-image.png" alt="Image one kerassentials" id="img_one" width="500px">
+                   <img src="/imagens/product-image.png" alt="Image one get kerassentials" id="img_one" width="500px">
                 </div>
             </section>
             <section class="sec_two">
                 <div class="imagem_certifications">
-                    <img src="/imagens/certifications.png" alt="Image certifications" class="img_sec_two" width="500px">
+                    <img src="/Imagens/certifications.png" alt="get kerassentials" class="img_sec_two" width="500px">
                 </div>
                 <div>
                     <p class="p_certifications">* Manufactured in the USA from the finest of foreing and domestic ingredients.</p>
@@ -56,10 +56,13 @@
             </section>
             <section class="sec_balloon">
                 <div class="div_balloon">
-                    <h2>Claim Your Discounted</h2>
-                    <h2>Last Units, enjoy today</h2>
+                    <h2>Last Units</h2>
+                    <h2>Claim Your Discount</h2>
+                    <h2>of up to 50% <a href="https://thekerassentials.com/start/index.php?aff_id=1047659" target="_self">HERE!</a></h2>
+                    <h2>and guarantee...</h2>
                 </div>
             </section>
+            <!--
             <section class="sec_three">
                 <div class="p_name_offer">
                     <h3><strong>Buy Now on the Official Website, Enjoy and Save:</strong></h3>
@@ -72,27 +75,27 @@
                     <p><strong>+ Rush Delivery</strong></p>
                 </div>
                 <div class="button_buy">
-                    <a href="https://thekerassentials.com/start/index.php?aff_id=1047659"
-                    target="_self"><button>Buy Now</button></a>
+                    <a href="https://thekerassentials.com/start/index.php?aff_id=1047659"target="_self"><button>Buy Now</button></a>
                 </div>
             </section>
+            -->
             <section class="sec_four">
                 <div class="imagem_guarantee">
-                    <img src="/imagens/img_top_guarantee.png" alt="60 Days Money Guarantee" id="guar" width="200px">
+                    <img src="/Imagens/img_top_guarantee.png" alt="60 Days Money Guarantee buy kerassentials" id="guar" width="200px">
                 </div>
                 <div class="div_guarantee">
                     <h3 id="h3_guarantee">100% SATISFACTION <strong>60-DAYS MONEY BACK GUARANTEE</strong></h3>
                     <p>Your order today is covered by our iron-clad 60-day 100% money-back guarantee. If you are not impressed with the results, then just write to us and we’ll refund every single cent.</p>
                 </div>
-                <div class="button_find_out">
-                    <a href="https://thekerassentials.com/text.php?aff_id=1047659"
-                    target="_self"><button>Order Now</button></a>
-                </div>
             </section>
+            <div class="button_find_out">
+                <a href="https://thekerassentials.com/text.php?aff_id=1047659"
+                target="_self"><button>Order Now</button></a>
+            </div>
             <section class="sec_five">
                 <div class="stars">
                     <p>Our customers say</p>
-                    <img src="/imagens/stars.png" alt="img 5 stars" class="img_stars" width="150px">
+                    <img src="/Imagens/stars.png" alt="img 5 stars" class="img_stars" width="150px">
                     <p>Based on 14.576+ reviews!</p>
                 </div>
             </section>
