--- a/pages/shipping.html
+++ b/pages/shipping.html
@@ -86,7 +86,7 @@
     <footer>
         <div id="container_footer"> 
             <p id="p_footer">Copyright 
-                &copy;<a href="/index.html"><strong> kerassentials®</strong></a>
+                &copy;<a href="/index.html"><strong> KERASSENTIAS®</strong></a>
                 Research 2024 All Rights Reserved. <strong><a href="/index.html">
             </p>
         </div>
