--- a/pages/terms.html
+++ b/pages/terms.html
@@ -68,7 +68,7 @@ Information on this Site including any product label or packaging should not be 
     <footer>
         <div id="container_footer"> 
             <p id="p_footer"> Copyright 
-                &copy;<a href="/index.html"><strong> CELLUCARE®</strong></a>
+                &copy;<a href="/index.html"><strong> KERASSENTIAS®</strong></a>
                 Research 2024 All Rights Reserved. <strong><a href="/index.html">
             </p>
         </div>
