--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                     <p>Based on 14.576+ reviews!</p>
                 </div>
             </section>
+            <section>
+                
+            </section>
         </div>
     </main>
     <footer>
@@ -130,7 +133,6 @@
                     <h4><a href="/pages/return_policy.html" target="_self">REFUND POLICY</a></h4>
                 </div>
             </div>
-            
         </div>
     </footer>
 </body>
